src/App.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Raleway', sans-serif;
}

.body-wrapper {
  width: 100VW;
  height: 100vh; 
  display: grid;
  grid-template-columns: 1fr;
  background-color: lightgrey;
  
  
}

.body-wrapper .student-content-wrapper {
  justify-content: center;
  justify-self: center;;
  align-items: center;;
  align-self: center;
  align-content: space-around;
  width: 65%;
  height: 85%;
  overflow: hidden;
  background-color: white;;
  border-radius: 10px;
}
.student-list {
  height: 100%;
  overflow-y: scroll;
  border: none;
}

.student-list:nth-child(1) {
  border: none;
  background: blue;
}
.studentName {
  font-weight: 100;
  font-size:28px;
}

.student-content {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-rows: auto;

  
}

.student-content .btn-expansion {
  border: solid black 10px;
  width: fit-content;
  border-radius: 50%;
  border: none;
  background-color: white;
  color: grey;
  text-align: center;;
  font-size: 64px;
  cursor: pointer;
  margin-top: -2vh;
}

.btn-expansion:focus {
  outline-style: none;
  outline: none;
}
.single-student-container {
  display: flex;
  flex-direction: row;
  column-gap: 0.5em;
  height: max-content;
  padding: 1em;
}

.student-list .single-student-container {
  border-bottom: solid 1px lightgrey;;

}


.student-contactInfo {
  padding-left: 1em;
  margin-top: -5vh;
}

.expansion-content-wrapper {
  display: none;
}
.student-photo {
  border: solid lightgrey 1px;
  border-radius: 50%;
  height: 17vh;
  width: 10vw;
}

.search {
  width: 97%;
  height: 8vh;
  outline: none;
  border: none;
  margin-left: 1.5%;
  border-bottom: solid darkgrey 1px;
}


.tag-input {
  border: none;
  border-bottom: black solid 1px;
  outline: none;
  margin-bottom: 1em;
  height: 5vh;

}

.tag-input:focus {
  outline: none;
}

.tags-container {
  width: 50%;
  height: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);;
  grid-template-rows: auto;
  height: fit-content;
  column-gap: 0.5em;;
  row-gap: 0.5em;
  padding: 0.25em;

}

.add-tag-container {
  width: 50%;
}


.tag {
  padding: 0.5em;
  height: fit-content;
  background-color: gainsboro;
  text-align: center; 
  border-radius: 5%;
}

